<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/id_textViewtriangle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="43dp"
        android:text="@string/triangle_type"
        app:layout_constraintBottom_toTopOf="@+id/id_firstsidelenght"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_textViewtriangle2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_textViewtriangle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="11dp"
        android:text="@string/first_side_length"
        app:layout_constraintBottom_toBottomOf="@+id/id_firstsidelenght"
        app:layout_constraintEnd_toStartOf="@+id/id_firstsidelenght"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_textViewtriangle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="11dp"
        android:text="@string/second_side_length"
        app:layout_constraintEnd_toStartOf="@+id/id_secondsidelenght"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_firstsidelenght" />

    <TextView
        android:id="@+id/id_textViewtriangle4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="91dp"
        android:text="@string/third_side_length"
        app:layout_constraintBottom_toTopOf="@+id/id_buttonshowtriangletype"
        app:layout_constraintEnd_toStartOf="@+id/id_thirdsidelenght"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_secondsidelenght" />

    <EditText
        android:id="@+id/id_firstsidelenght"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/id_secondsidelenght"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_textViewtriangle2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_secondsidelenght"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/id_thirdsidelenght"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_textViewtriangle3"
        app:layout_constraintTop_toBottomOf="@+id/id_firstsidelenght" />

    <EditText
        android:id="@+id/id_thirdsidelenght"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_textViewtriangle4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_textViewtriangle4" />

    <Button
        android:id="@+id/id_buttonshowtriangletype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:layout_marginBottom="296dp"
        android:onClick="triangleType"
        android:text="@string/show_triangle_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_thirdsidelenght"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
        android:id="@+id/id_textViewtypeoftriangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="216dp"
        android:onClick="triangleType"
        android:text="@string/type_of_triangle"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_buttonshowtriangletype" />
</androidx.constraintlayout.widget.ConstraintLayout>